2010-02-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* flickr.py, base.py: Added support for user name and group name
	  in url.  Added tooltips for argument entries.

2010-01-31  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoliststore.py (RecentQueue.pop): Delete old cache files.

2010-01-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences.py, gphotoframe.glade: Added GUI for preferences of
	  max_width and max_height.

2010-01-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences.py, photoliststore.py, gphotoframe.glade: Added new
	  option "Display Interval in Full Screen Mode".
	* folder.py: Set default folder to the xdg user dir (Pictures).
	* menu.py, photoliststore.py, gphotoframe.glade: Added new menu
	  item "Next Photo"
	* gphotoframe.png, gphotoframe.svg: Added application icons.

2010-01-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences.py (PhotoSourceDialog.run): Added new GConf key
	  "default_weight".  The default value was changed to 3.
	* flickr.py (FlickrAPI.get_url): Fixed a bug. "Interestingness"
	  API doesn't need any argument. (issue #37)
	* gphotoframe.schemas.in, setup.cfg: Added Gconf schemas file.
	* POTFILES.in, po/ja.po: Updated translation.

2010-01-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* config.py (GConf.get_int): Fixed a bug. If the key is invalid,
	  "None" object is returned (issue #34).
	* photoframe.py: Added support for border color config. (issue #34)
	* rss.py: Added support for images in <content:encoded>, feed
	  titles in Photo Source Preferences.
	* photoimage.py, base.py: Added photo source icons in Tooltips.
	* base.py, rss.py, rss-16.png: Added RSS icon.

2010-01-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fspot.py, base.py, POTFILES.in, ja.po: Implemented F-Spot
	  options tooltip on photo source treeview.
	* preferences.py, gphotoframe.glade: Implemented tooltips for
	  photo source treeview.
	* plugins/*.py: Introduced xdg.IconTheme.getIconPath.  Support for